decided to build my own todo layout instead of using ionic's built in directives
I needed more, flexibility, ionic lists had some weird transitive
properties

--- a/src/pages/todoList/todoList.html
+++ b/src/pages/todoList/todoList.html
@@ -7,14 +7,10 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <h3>Todo List</h3>
-  <ul>
-    <li>
-      todo 1
-    </li>
-    <li>
-      todo 2
-    </li>
-  </ul>
+<ion-content>
+  <div id="todoList">
+    <ul>
+      <li><input type="checkbox"/><input type="text" readonly="readonly" value="Buy Food"/></li>
+    </ul>
+  </div>
 </ion-content>
