--- a/src/pages/todoList/todoList.html
+++ b/src/pages/todoList/todoList.html
@@ -8,9 +8,14 @@
 </ion-header>
 
 <ion-content>
-  <div id="todoList">
-    <ul>
-      <li><input type="checkbox"/><input type="text" readonly="readonly" value="Buy Food"/></li>
+  <div id="todoListContainer">
+    <ul id="todoList">
+      <li id="todo">
+        <input type="checkbox"/>
+        <input type="text" readonly="readonly" value="Buy Food"/>
+        <a>Edit</a>
+        <a>Delete</a>
+      </li>
     </ul>
   </div>
 </ion-content>
