--- a/src/pages/todoList/todoList.html
+++ b/src/pages/todoList/todoList.html
@@ -8,14 +8,37 @@
 </ion-header>
 
 <ion-content>
-  <div id="todoListContainer">
-    <ul id="todoList">
-      <li id="todo">
-        <input type="checkbox"/>
-        <input type="text" readonly="readonly" value="Buy Food"/>
-        <a>Edit</a>
-        <a>Delete</a>
-      </li>
-    </ul>
-  </div>
+
+  <ion-card>
+    <ion-row>
+      <ion-col>
+        <ion-checkbox style="padding-top: 12px; padding-left: 8px;"></ion-checkbox>
+      </ion-col>
+
+      <ion-col>
+        <ion-label>Slap My Nuts</ion-label>
+      </ion-col>
+
+      <ion-col>
+        <button ion-button small outline>edit</button>
+      </ion-col>
+    </ion-row>
+  </ion-card>
+
+  <ion-card>
+    <ion-row>
+      <ion-col>
+        <ion-checkbox style="padding-top: 12px; padding-left: 8px;"></ion-checkbox>
+      </ion-col>
+
+      <ion-col>
+        <ion-label>Slap My Nuts</ion-label>
+      </ion-col>
+
+      <ion-col>
+        <button ion-button small outline>edit</button>
+      </ion-col>
+    </ion-row>
+  </ion-card>
+
 </ion-content>
