--- a/src/pages/todoList/todoList.html
+++ b/src/pages/todoList/todoList.html
@@ -21,8 +21,16 @@
 
       <ion-col>
         <button ion-button small outline>edit</button>
+        <button ion-button small outline color="danger">delete</button>
       </ion-col>
     </ion-row>
+
+    <!-- Details -->
+    <ion-card-content>
+      <hr />
+      <h3>Title</h3>
+      <p>Notes Notes Notes Notes Notes Notes Notes Notes Notes</p>
+    </ion-card-content>
   </ion-card>
 
   <ion-card>
@@ -32,11 +40,12 @@
       </ion-col>
 
       <ion-col>
-        <ion-label>Slap My Nuts</ion-label>
+        <ion-label>Chop My Nuts</ion-label>
       </ion-col>
 
       <ion-col>
         <button ion-button small outline>edit</button>
+        <button ion-button small outline color="danger">delete</button>
       </ion-col>
     </ion-row>
   </ion-card>
