--- a/src/pages/todoList/todoList.html
+++ b/src/pages/todoList/todoList.html
@@ -50,4 +50,43 @@
     </ion-row>
   </ion-card>
 
+  <ion-list>
+    <ion-item-sliding>
+
+      <ion-item>
+        <ion-row>
+          <ion-col>
+            <button ion-button>Test 1</button>
+          </ion-col>
+
+          <ion-col>
+            <button ion-button>Test 2</button>
+          </ion-col>
+
+          <ion-col>
+            <button ion-button>Test 3</button>
+          </ion-col>
+        </ion-row>
+      </ion-item>
+
+    <ion-item-options side="left">
+      <button ion-button color="danger">
+        <ion-icon name="trash"></ion-icon>
+        Delete
+      </button>
+    </ion-item-options>
+
+      <ion-item-options side="right">
+      <button ion-button color="primary">
+         <ion-icon name="add"></ion-icon>
+        Edit
+      </button>
+    </ion-item-options>
+
+    </ion-item-sliding>
+
+  </ion-list>
+
+
+
 </ion-content>
