--- a/src/pages/todoList/todoList.html
+++ b/src/pages/todoList/todoList.html
@@ -7,86 +7,22 @@
   </ion-navbar>
 </ion-header>
 
+
 <ion-content>
-
   <ion-card>
+    <!-- Check Box and Title -->
     <ion-row>
-      <ion-col>
-        <ion-checkbox style="padding-top: 12px; padding-left: 8px;"></ion-checkbox>
+      <ion-col width-10>
+        <ion-checkbox></ion-checkbox>
       </ion-col>
-
-      <ion-col>
-        <ion-label>Slap My Nuts</ion-label>
-      </ion-col>
-
-      <ion-col>
-        <button ion-button small outline>edit</button>
-        <button ion-button small outline color="danger">delete</button>
+      <ion-col width-90>
+        <ion-label>Buy Groceries</ion-label>
       </ion-col>
     </ion-row>
 
-    <!-- Details -->
-    <ion-card-content>
-      <hr />
-      <h3>Title</h3>
-      <p>Notes Notes Notes Notes Notes Notes Notes Notes Notes</p>
-    </ion-card-content>
+    <!-- Dropdown button -->
+
+    <!--Editable content-->
+
   </ion-card>
-
-  <ion-card>
-    <ion-row>
-      <ion-col>
-        <ion-checkbox style="padding-top: 12px; padding-left: 8px;"></ion-checkbox>
-      </ion-col>
-
-      <ion-col>
-        <ion-label>Chop My Nuts</ion-label>
-      </ion-col>
-
-      <ion-col>
-        <button ion-button small outline>edit</button>
-        <button ion-button small outline color="danger">delete</button>
-      </ion-col>
-    </ion-row>
-  </ion-card>
-
-  <ion-list>
-    <ion-item-sliding>
-
-      <ion-item>
-        <ion-row>
-          <ion-col>
-            <button ion-button>Test 1</button>
-          </ion-col>
-
-          <ion-col>
-            <button ion-button>Test 2</button>
-          </ion-col>
-
-          <ion-col>
-            <button ion-button>Test 3</button>
-          </ion-col>
-        </ion-row>
-      </ion-item>
-
-    <ion-item-options side="left">
-      <button ion-button color="danger">
-        <ion-icon name="trash"></ion-icon>
-        Delete
-      </button>
-    </ion-item-options>
-
-      <ion-item-options side="right">
-      <button ion-button color="primary">
-         <ion-icon name="add"></ion-icon>
-        Edit
-      </button>
-    </ion-item-options>
-
-    </ion-item-sliding>
-
-  </ion-list>
-
-
-
 </ion-content>
