--- a/src/pages/todoList/todoList.html
+++ b/src/pages/todoList/todoList.html
@@ -19,10 +19,49 @@
         <ion-label>Buy Groceries</ion-label>
       </ion-col>
     </ion-row>
-
+    <hr />
     <!-- Dropdown button -->
-
+    <ion-row>
+      <ion-col center text-center style="padding: 0; margin: 0;">
+        <ion-icon ios="md-arrow-dropdown" md="md-arrow-dropdown"></ion-icon>
+      </ion-col>
+    </ion-row>
     <!--Editable content-->
 
   </ion-card>
+
+  <ion-card>
+    <!-- Check Box and Title -->
+    <ion-row>
+      <ion-col width-10>
+        <ion-checkbox></ion-checkbox>
+      </ion-col>
+      <ion-col width-90>
+        <ion-label>Buy Shirts</ion-label>
+      </ion-col>
+    </ion-row>
+    <hr />
+
+    <!--Editable content-->
+    <ion-item>
+      <ion-label>Title</ion-label>
+      <ion-input type="text" value="Buy Shirts"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>Notes</ion-label>
+      <ion-textarea></ion-textarea>
+    </ion-item>
+
+    <hr />
+    <!-- Dropup button -->
+    <ion-row>
+      <ion-col center text-center style="padding: 0; margin: 0;">
+        <ion-icon ios="md-arrow-dropup" md="md-arrow-dropup"></ion-icon>
+      </ion-col>
+    </ion-row>
+
+
+  </ion-card>
+
+
 </ion-content>
