Can't get things exactly how I want them

--- a/src/pages/todoList/todoList.html
+++ b/src/pages/todoList/todoList.html
@@ -9,6 +9,38 @@
 
 
 <ion-content>
+
+  <ion-card>
+
+    <!-- Todo -->
+    <ion-row>
+      <ion-col width-10>
+        <ion-checkbox></ion-checkbox>
+      </ion-col>
+      <ion-col width-90>
+        <ion-label>Buy iPhone</ion-label>
+      </ion-col>
+    </ion-row>
+
+    <!--Divider-->
+    <hr style="padding: 0; margin: 0;" />
+
+    <!-- Dropdown Button -->
+    <ion-row>
+
+      <ion-col center text-center style="padding: 0; margin: 0;">
+        <ion-icon ios="md-arrow-dropdown" md="md-arrow-dropdown"></ion-icon>
+      </ion-col>
+    </ion-row>
+
+  </ion-card>
+
+
+
+
+
+
+
   <ion-card>
     <!-- Check Box and Title -->
     <ion-row>
@@ -19,8 +51,9 @@
         <ion-label>Buy Groceries</ion-label>
       </ion-col>
     </ion-row>
-    <hr />
+
     <!-- Dropdown button -->
+    <hr />
     <ion-row>
       <ion-col center text-center style="padding: 0; margin: 0;">
         <ion-icon ios="md-arrow-dropdown" md="md-arrow-dropdown"></ion-icon>
@@ -43,14 +76,27 @@
     <hr />
 
     <!--Editable content-->
-    <ion-item>
+
+    <ion-card-content>
       <ion-label>Title</ion-label>
       <ion-input type="text" value="Buy Shirts"></ion-input>
-    </ion-item>
-    <ion-item>
+    </ion-card-content>
+
+    <ion-card-content>
       <ion-label>Notes</ion-label>
       <ion-textarea></ion-textarea>
-    </ion-item>
+    </ion-card-content>
+
+    <!-- <ion-row>
+      <ion-col>
+
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+
+      </ion-col>
+    </ion-row> -->
 
     <hr />
     <!-- Dropup button -->
