--- a/src/pages/todoList/todoList.html
+++ b/src/pages/todoList/todoList.html
@@ -10,12 +10,12 @@
 
 <ion-content>
 
+<!-- With Hidden Content -->
   <ion-card>
-
     <!-- Todo -->
     <ion-row>
       <ion-col width-10>
-        <ion-checkbox></ion-checkbox>
+        <ion-checkbox class="todo-checkBox"></ion-checkbox>
       </ion-col>
       <ion-col width-90>
         <ion-label>Buy iPhone</ion-label>
@@ -23,91 +23,14 @@
     </ion-row>
 
     <!--Divider-->
-    <hr style="padding: 0; margin: 0;" />
+    <hr class="todo-hr" />
 
     <!-- Dropdown Button -->
     <ion-row>
-
       <ion-col center text-center style="padding: 0; margin: 0;">
         <ion-icon ios="md-arrow-dropdown" md="md-arrow-dropdown"></ion-icon>
       </ion-col>
     </ion-row>
-
   </ion-card>
-
-
-
-
-
-
-
-  <ion-card>
-    <!-- Check Box and Title -->
-    <ion-row>
-      <ion-col width-10>
-        <ion-checkbox></ion-checkbox>
-      </ion-col>
-      <ion-col width-90>
-        <ion-label>Buy Groceries</ion-label>
-      </ion-col>
-    </ion-row>
-
-    <!-- Dropdown button -->
-    <hr />
-    <ion-row>
-      <ion-col center text-center style="padding: 0; margin: 0;">
-        <ion-icon ios="md-arrow-dropdown" md="md-arrow-dropdown"></ion-icon>
-      </ion-col>
-    </ion-row>
-    <!--Editable content-->
-
-  </ion-card>
-
-  <ion-card>
-    <!-- Check Box and Title -->
-    <ion-row>
-      <ion-col width-10>
-        <ion-checkbox></ion-checkbox>
-      </ion-col>
-      <ion-col width-90>
-        <ion-label>Buy Shirts</ion-label>
-      </ion-col>
-    </ion-row>
-    <hr />
-
-    <!--Editable content-->
-
-    <ion-card-content>
-      <ion-label>Title</ion-label>
-      <ion-input type="text" value="Buy Shirts"></ion-input>
-    </ion-card-content>
-
-    <ion-card-content>
-      <ion-label>Notes</ion-label>
-      <ion-textarea></ion-textarea>
-    </ion-card-content>
-
-    <!-- <ion-row>
-      <ion-col>
-
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>
-
-      </ion-col>
-    </ion-row> -->
-
-    <hr />
-    <!-- Dropup button -->
-    <ion-row>
-      <ion-col center text-center style="padding: 0; margin: 0;">
-        <ion-icon ios="md-arrow-dropup" md="md-arrow-dropup"></ion-icon>
-      </ion-col>
-    </ion-row>
-
-
-  </ion-card>
-
 
 </ion-content>
