editable area not looking how I want it to.

--- a/src/pages/todoList/todoList.html
+++ b/src/pages/todoList/todoList.html
@@ -45,10 +45,28 @@
       </ion-col>
     </ion-row>
 
+    <!-- Divider -->
+    <hr class="todo-hr" />
+
+    <!-- Hidden Editable fields -->
+    <ion-row style="padding-bottom: 0px; margin-bottom: 0px;">
+      <ion-col>
+        <ion-label style="padding-left: 8px; margin: 0px; padding-top: 3px;">Title</ion-label>
+        <ion-input type="text" value="Buy Screen Protector"></ion-input>
+      </ion-col>
+    </ion-row>
+
+    <ion-row style="padding-bottom: 0px; margin-bottom: 0px;">
+      <ion-col>
+        <ion-label class="todo-label">Notes</ion-label>
+        <ion-textarea value="Buy Screen Online"></ion-textarea>
+      </ion-col>
+    </ion-row>
+
     <!--Divider-->
     <hr class="todo-hr" />
 
-    <!-- Dropdown Button -->
+    <!-- Dropup Button -->
     <ion-row>
       <ion-col center text-center class="todo-slimCol">
         <ion-icon ios="md-arrow-dropup" md="md-arrow-dropup"></ion-icon>
