--- a/src/pages/todoList/todoList.html
+++ b/src/pages/todoList/todoList.html
@@ -33,6 +33,8 @@
     </ion-row>
   </ion-card>
 
+  <!-- End card without edit-->
+
 <!-- Todo with hidden content -->
   <ion-card>
     <!-- Todo -->
@@ -47,19 +49,20 @@
 
     <!-- Divider -->
     <hr class="todo-hr" />
+    <br />
 
     <!-- Hidden Editable fields -->
-    <ion-row style="padding-bottom: 0px; margin-bottom: 0px;">
+    <ion-row>
       <ion-col>
-        <ion-label style="padding-left: 8px; margin: 0px; padding-top: 3px;">Title</ion-label>
+        <ion-label class="todo-label">Title</ion-label>
         <ion-input type="text" value="Buy Screen Protector"></ion-input>
       </ion-col>
     </ion-row>
 
-    <ion-row style="padding-bottom: 0px; margin-bottom: 0px;">
+    <ion-row>
       <ion-col>
         <ion-label class="todo-label">Notes</ion-label>
-        <ion-textarea value="Buy Screen Online"></ion-textarea>
+        <ion-textarea value="Buy screen protector Online from amazon"></ion-textarea>
       </ion-col>
     </ion-row>
 
