--- a/src/pages/Todo/todoComponent.html
+++ b/src/pages/Todo/todoComponent.html
@@ -63,4 +63,19 @@
     </a>
 
   </ion-card>
+
+  <!-- Create new todo -->
+  <ion-card>
+    <ion-row>
+      <ion-col width-90>
+        <ion-input type="text" placeholder="Add New Todo!" [(ngModel)]="newTodo"></ion-input>
+      </ion-col>
+
+      <ion-col width-10>
+        <button ion-button small outline color="default" (click)="createTodo()">
+          <ion-icon name="add"></ion-icon>
+        </button>
+      </ion-col>
+    </ion-row>
+  </ion-card>
 </ion-content>
