added todo count
Lets put it in the right of the nabber

--- a/src/pages/Todo/todoComponent.html
+++ b/src/pages/Todo/todoComponent.html
@@ -3,7 +3,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Todoloo</ion-title>
+    <ion-title>Todoloo! How many todo's do you have to do? {{ todoCount }}</ion-title>
   </ion-navbar>
 </ion-header>
 
