--- a/src/pages/Todo/todoComponent.html
+++ b/src/pages/Todo/todoComponent.html
@@ -12,7 +12,7 @@
 
 
 <ion-content>
-
+<div *ngIf="todoList.length > 0">
   <ion-card *ngFor="let todo of todoList">
     <ion-row>
       <ion-col width-10>
@@ -66,6 +66,8 @@
     </a>
 
   </ion-card>
+</div>
+
 
   <!-- Create new todo -->
   <ion-card>
