--- a/src/pages/Todo/todoComponent.html
+++ b/src/pages/Todo/todoComponent.html
@@ -12,8 +12,7 @@
 
 
 <ion-content>
-<div *ngIf="todoList.length > 0">
-  <ion-card *ngFor="let todo of todoList">
+  <ion-card *ngFor="let todo of todoList | async">
     <ion-row>
       <ion-col width-10>
           <ion-checkbox [(ngModel)]="todo.complete" (click)="todo.update()" class="todo-checkBox" name="complete"></ion-checkbox>
@@ -66,7 +65,7 @@
     </a>
 
   </ion-card>
-</div>
+
 
 
   <!-- Create new todo -->
