Added header comments

--- a/src/pages/Todo/todoComponent.html
+++ b/src/pages/Todo/todoComponent.html
@@ -1,4 +1,12 @@
 <ion-header>
+  <!--
+
+    todoComponent.hmtl
+    Anthony Scinocco 200271982
+    A really bad todo app, using angular 2 and firebase
+    No user accounts, basi
+
+  -->
   <ion-navbar>
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
